2005-11-29  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am, src/Makefile.am: Added missing files for
	distribution. Still far from perfect, but better.

2005-11-29  Prakash Punnoor <prakash@punnoor.de>
	
	* CMakeLists.txt: Sven missed two lines on clean-up

2005-11-29  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, Makefile.am, admin/.cvsignore, admin/Makefile.am,
	configure.ac: Cleaned up admin directory structure.

	* admin/RPM/openal.spec, admin/RPM/openal.xpm,
	admin/autotools/.cvsignore, admin/autotools/.indent.pro,
	admin/pkgconfig/.cvsignore, admin/pkgconfig/Makefile.am,
	admin/pkgconfig/openal-config.in, admin/pkgconfig/openal.pc.in: Added.

	* admin/.indent.pro, admin/openal-config.in, admin/openal.pc.in,
	admin/openal.spec admin/openal.xpm: Removed.

2005-11-28  Sven Panne  <sven.panne@aedion.de>

	* src/Makefile.am: Temporarily added portable floating point
	multiplication code to the library.

	* admin/openal.spec: Updated build dependencies.

	* configure.ac, src/Makefile.am: Don't disturb user variables like
	CFLAGS. Cleaned up some old stuff.

	* src/Makefile.am: Added path to local <AL/alext.h>.

2005-11-26  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: make ASM and CXX detection optional
	
	* src/arch/darwin/darwin_native.c: NULL isn't float nor int; Darwin
	target should now compile using CMake

2005-11-25  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: minor clean-up

	* README: typos...

2005-11-24  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/al_buffer.c, src/al_config.c, src/al_ext.c,
	src/al_ext.h, src/al_listen.c, src/al_main.c, src/al_main.h,
	src/al_rctree.h, src/al_rcvar.c, src/al_rcvar.h, src/al_source.c,
	src/al_types.h, src/mixaudio16.c, src/alc/alc_context.c,
	src/alc/alc_device.c, src/arch/alsa/alsa.c, src/arch/linux/lin_dsp.c,
	src/arch/sdl/sdl.c, src/extensions/al_ext_capture.c,
	src/extensions/al_ext_mp3.c, src/extensions/al_ext_needed.h,