@@ -1,0 +1,1 @@
+nobase_include_HEADERS = AL/al.h AL/alc.h
