@@ -1,2 +1,1 @@
-SUBDIRS = AL
-
+nobase_include_HEADERS = AL/alext.h
